RESOLVED FIXED146917
iOS WebKit doesn't build.
https://bugs.webkit.org/show_bug.cgi?id=146917
Summary iOS WebKit doesn't build.
Yongjun Zhang
Reported 2015-07-13 14:46:23 PDT
We shouldn't use deprecated UIVC API for preview.
Attachments
Patch. (2.68 KB, patch)
2015-07-13 14:50 PDT, Yongjun Zhang
mitz: review+
Fix the conflict. (3.00 KB, patch)
2015-07-13 15:39 PDT, Yongjun Zhang
no flags
Yongjun Zhang
Comment 1 2015-07-13 14:50:14 PDT
Yongjun Zhang
Comment 2 2015-07-13 14:52:16 PDT
mitz
Comment 3 2015-07-13 15:00:47 PDT
Comment on attachment 256730 [details] Patch. View in context: https://bugs.webkit.org/attachment.cgi?id=256730&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3185 > + _previewing = [window.rootViewController registerForPreviewingWithSourceView:self]; Do we need to retain this?
mitz
Comment 4 2015-07-13 15:00:55 PDT
I’ve already fixed the build in r186779 but moving off the deprecated API is better.
Yongjun Zhang
Comment 5 2015-07-13 15:37:16 PDT
(In reply to comment #3) > Comment on attachment 256730 [details] > Patch. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=256730&action=review > > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3185 > > + _previewing = [window.rootViewController registerForPreviewingWithSourceView:self]; > > Do we need to retain this? yeah, I think we need to. Will Change.
Yongjun Zhang
Comment 6 2015-07-13 15:39:36 PDT
Created attachment 256734 [details] Fix the conflict.
mitz
Comment 7 2015-07-13 15:50:30 PDT
Comment on attachment 256734 [details] Fix the conflict. View in context: https://bugs.webkit.org/attachment.cgi?id=256734&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3197 > + _previewing.delegate = nil; > [_previewGestureRecognizer setDelegate:nil]; > _previewGestureRecognizer = nil; > + [_previewing release]; Should we do these two new things (clearing the delegate and releasing) in our -dealloc too, just in case?
Yongjun Zhang
Comment 8 2015-07-14 09:42:05 PDT
(In reply to comment #7) > Comment on attachment 256734 [details] > Fix the conflict. > > View in context: > https://bugs.webkit.org/attachment.cgi?id=256734&action=review > > > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:3197 > > + _previewing.delegate = nil; > > [_previewGestureRecognizer setDelegate:nil]; > > _previewGestureRecognizer = nil; > > + [_previewing release]; > > Should we do these two new things (clearing the delegate and releasing) in > our -dealloc too, just in case? I don't think it's needed. We will do the cleanup when the view is removed from window, which should be done before dealloc.
WebKit Commit Bot
Comment 9 2015-07-14 10:39:06 PDT
Comment on attachment 256734 [details] Fix the conflict. Clearing flags on attachment: 256734 Committed r186808: <http://trac.webkit.org/changeset/186808>
WebKit Commit Bot
Comment 10 2015-07-14 10:39:10 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.