https://bugs.webkit.org/show_bug.cgi?id=146917 iOS WebKit doesn't build. rdar://problem/21801544

Fix the build - don't use deprecated methods.

Patch by Yongjun Zhang <yongjun_zhang@apple.com> on 2015-07-14
Reviewed by Dan Bernstein.

* UIProcess/ios/WKContentViewInteraction.h:
* UIProcess/ios/WKContentViewInteraction.mm:
(-[WKContentView _registerPreviewInWindow:]):
(-[WKContentView _unregisterPreviewInWindow:]):

Canonical link: https://commits.webkit.org/164997@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186808 268f45cc-cd09-0410-ab3c-d52691b4dbfc